feat: generate accessors in Chibigen
Signed-off-by: Diogo Behrens <db7@sdf.org>

--- a/mockoto.1
+++ b/mockoto.1
@@ -36,7 +36,7 @@ Can be provided multiple times.
 Add an include path hint to generated bindings.
 Can be provided multiple times.
 .TP
-.B -help
+.B --help
 Show command help from LLVM command line parser.
 .SH EXAMPLES
 .TP
